# numpy_linalg_extras

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
numpy_linalg/: __init__.py  _linalg.py  _ln_creation.py  _ln_indexing.py  _ln_manipulation.py  _ln_wrap.py  _lnarray.py  convert.py  convert_loop.py  fft.py  indexing.py  random.py  version.py  wrappers.py
numpy_linalg/gufuncs/: __init__.py  _families.py  _gufuncs_blas.pyi  _gufuncs_cloop.pyi  _gufuncs_lu_solve.pyi  _gufuncs_qr_lstsq.pyi  _util.py  _vectors.py
numpy_linalg/testing/: __init__.py  hypothesis_numpy.py  unittest_numpy.py  unittest_tweaks.py
src/: gufunc_common.h  gufunc_common_f.h  gufuncs_blas.c.src  gufuncs_cloop.c.src  gufuncs_lu_solve.c.src  gufuncs_qr_lstsq.c.src  rearrange_data.c.src  rearrange_data.h
tests/: __init__.py  __main__.py  hypothesis_numpy.py  test_creation.py  test_gufunc.py  test_gulqr.py  test_gulstsq.py  test_gulusolve.py  test_guqrlqpinv.py  test_guqrlstsq.py  test_gusolve.py  test_linalg.py  test_lnarray.py  test_lncreation.py  unittest_numpy.py  unittest_tweaks.py
