[build_ext]
inplace=1

[metadata]
name = numpy_linalg
// version = attr: numpy_linalg.__version__
description = Linear algebra enhancements for numpy
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
install_requires =
  numpy >=1.16
